[project]
name = "d3rlpy-patch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CJY-C", email = "masarity@outlook.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
